--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
                     <i class="fa-solid fa-trash"></i>
                 </button>
             </div>
+            <div class="todo">
+                <h3>I'm going to play guitar tonight</h3>
+                <button class="finish-todo">
+                    <i class="fa-solid fa-check"></i>
+                </button>
+                <button class="edit-todo">
+                    <i class="fa-solid fa-pen"></i>
+                </button>
+                <button class="delete-todo">
+                    <i class="fa-solid fa-trash"></i>
+                </button>
+            </div>
         </div>
     </div>
 </body>
